Add stay mode to the Tulpa